Bug 14933 - OOM killer unexpectedly called
Summary: OOM killer unexpectedly called
Status: CLOSED CODE_FIX
Alias: None
Product: Memory Management
Classification: Unclassified
Component: Page Allocator (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andrew Morton
URL:
Keywords:
Depends on:
Blocks: 14230
  Show dependency tree
 
Reported: 2009-12-29 12:44 UTC by Rafael J. Wysocki
Modified: 2010-01-27 19:26 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.32
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2009-12-29 12:44:40 UTC
Subject    : OOM killer unexpectedly called with kernel 2.6.32
Submitter  : "A. Boulan" <arnaud.boulan@libertysurf.fr>
Date       : 2009-12-24 23:42
References : http://marc.info/?l=linux-kernel&m=126169821317492&w=4

This entry is being used for tracking a regression from 2.6.31.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Rafael J. Wysocki 2009-12-29 12:45:05 UTC
Notify-Also : KOSAKI Motohiro <kosaki.motohiro@jp.fujitsu.com>
Comment 2 Johannes Engel 2010-01-21 12:18:20 UTC
That patch from Hugh Dickins does not solve the problem for me as the bug is still present in 2.6.32.4.
Comment 3 Michael Reinelt 2010-01-22 07:54:34 UTC
Same here. see #15058

Note You need to log in before you can comment on or make changes to this bug.